# another_your_meowmeow_mate

./: .gitignore  .release-notes-v0.1.0.md  .release-notes-v0.1.1.md  .release-notes-v0.1.2.md  .release-notes-v0.1.3.md  CMakeLists.txt  LICENSE  README.it.md  README.md  flake.nix  shell.nix
assets/sprites/default/: README.it.md  README.md  sheet.conf
assets/sprites/neko/: README.it.md  README.md  sheet.conf
cmake/: WaylandScanner.cmake
docs/: TESTING.md  architecture.it.md  architecture.md  cursor-providers.it.md  cursor-providers.md  sprite-format.it.md  sprite-format.md  testing.it.md  testing.md
examples/: README.it.md  README.md  aymm.conf  hyprland-autostart.conf  hyprneko.conf  waybar-module.jsonc
include/aymm/: ActionState.hpp  Animation.hpp  App.hpp  Cli.hpp  Config.hpp  ControlSocket.hpp  CursorChaseBehavior.hpp  CursorProvider.hpp  EvdevCursorProvider.hpp  HyprlandCursorProvider.hpp  Notifier.hpp  NullCursorProvider.hpp  OverlaySurface.hpp  Pet.hpp  PetStateMachine.hpp  PomodoroBehavior.hpp  PomodoroTimer.hpp  ProceduralCat.hpp  SpeechBubble.hpp  SpriteSheet.hpp  UserPersona.hpp  WaybarStatus.hpp
include/hyprneko/: Animation.hpp  App.hpp  Cli.hpp  Config.hpp  ControlSocket.hpp  CursorChaseBehavior.hpp  CursorProvider.hpp  EvdevCursorProvider.hpp  HyprlandCursorProvider.hpp  Notifier.hpp  NullCursorProvider.hpp  OverlaySurface.hpp  Pet.hpp  PetStateMachine.hpp  PomodoroBehavior.hpp  PomodoroTimer.hpp  ProceduralCat.hpp  SpriteSheet.hpp  UserPersona.hpp  WaybarStatus.hpp
nix/: default.nix
packaging/: README.it.md  README.md
packaging/deb/: control  rules
packaging/desktop/: aymm.desktop  hyprneko.desktop
packaging/rpm/: aymm.spec  hyprneko.spec
packaging/systemd/: aymm.service  hyprneko.service
protocols/: wlr-layer-shell-unstable-v1.xml
src/: main.cpp
src/animation/: Animation.cpp  ProceduralCat.cpp  SpeechBubble.cpp  SpriteSheet.cpp
src/app/: App.cpp  Config.cpp  Notifier.cpp
src/cli/: Cli.cpp  ControlSocket.cpp
src/cursor/: EvdevCursorProvider.cpp  HyprlandCursorProvider.cpp  NullCursorProvider.cpp
src/persona/: UserPersona.cpp
src/pet/: ActionState.cpp  CursorChaseBehavior.cpp  Pet.cpp  PetStateMachine.cpp  PomodoroBehavior.cpp
src/pomodoro/: PomodoroTimer.cpp
src/waybar/: WaybarStatus.cpp
src/wayland/: OverlaySurface.cpp
tools/: render_test.cpp
